# ScoreFence

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: ARCHITECTURE.md  DETECTION_MODEL.md  INTEGRATION.md  ORIGINALITY.md  THEORY.md  USE_CASES.md
examples/: report.json  report.md  scorefence.yaml
src/scorefence/: __init__.py  contracts.py
tests/: test_contracts.py
